--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,12 @@
-name: CI Pipeline - EntryTracker
+
+name: CI/CD Pipeline - EntryTracker
 
 on:
   push:
     branches:
       - main
+permissions:
+  contents: write
 
 jobs:
   Build-application:
@@ -21,13 +24,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      
       - name: Start EntryTracker
         run: |
           nohup python app.py > app.log 2>&1 &
-          sleep 10
-      - name: Run Tests
-        run: |
-          curl --fail http://localhost:5000 || (echo "App did not respond!" && cat app.log && exit 1)
+          echo "Waiting for EntryTracker to start..."
+          for i in {1..30}; do
+          if curl -sSf http://localhost:5000 > /dev/null; then
+          echo "✅ EntryTracker is up!"
+          break
+          fi
+          echo "⏳ Still waiting for EntryTracker... ($i)"
+          sleep 1
+          done
+          # Final check (fail if still not responding)
+          curl --fail http://localhost:5000 || (echo "❌ App did not respond!" && cat app.log && exit 1)
   Package-application:
     needs: Build-application
     runs-on: ubuntu-latest
@@ -54,23 +65,30 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v4
 
-        - name: Set up Docker Compose
-          run: docker compose version
-
         - name: Start E2E environment with docker compose
           run: |
             docker compose up -d --build
-            sleep 15
-        - name: Run E2E test with curl
+        - name: Wait for EntryTracker to be fully ready (DB included)
           run: |
-            curl --fail http://localhost:5000 || (echo "E2E test failed!" && docker compose logs && exit 1)
-        
-        - name: Shut down E2E environment
-          run: docker compose down -v
-
+            echo "⏳ Waiting for EntryTracker to connect to DB..."
+            for i in {1..30}; do
+              response=$(curl -s http://localhost:5000 || echo "")
+              echo "📡 Response attempt $i:"
+              echo "$response"
+              if echo "$response" | grep -q '"message": "Data fetched successfully from the database."'; then
+                echo "✅ EntryTracker is fully connected to the database!"
+                exit 0
+              else
+                echo "🕐 Waiting... ($i)"
+                sleep 1
+              fi
+            done
+            echo "❌ EntryTracker did not connect to the database in time."
+            exit 1
   Push-to-ECR:
     needs: E2E-tests
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -79,12 +97,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: entrytracker-image
-  
+
       - name: Load Docker image from tar
         run: |
           docker load -i entrytracker.tar
-          echo "Docker image loaded from entrytracker.tar"
-  
+          echo "✅ Docker image loaded"
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -94,19 +111,17 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 033567013533.dkr.ecr.ap-south-1.amazonaws.com
-    
+          aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | \
+          docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
       - name: Get latest patch version and bump it
         id: versioning
         run: |
           set -e
           repo="entrytracker-develeap"
-  
           latest=$(aws ecr list-images \
             --repository-name $repo \
             --query 'imageIds[*].imageTag' \
-            --output text | tr '\t' '\n' | grep -E '^1\.0\.[0-9]+$' | sort -V | tail -n1)
-
+            --output text | tr '\t' '\n' | grep -E '^1\\.0\\.[0-9]+$' | sort -V | tail -n1)
           if [ -z "$latest" ]; then
             new_version="1.0.0"
           else
@@ -114,18 +129,16 @@ jobs:
             new_patch=$((patch + 1))
             new_version="1.0.${new_patch}"
           fi
-
           echo "📦 New image version: $new_version"
-          echo "version=$new_version" >> "$GITHUB_OUTPUT"
-
-      - name: Tag Docker images
+          echo "new_tag=$new_version" >> "$GITHUB_OUTPUT"
+      - name: Tag Docker images correctly
         run: |
-          docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
-          docker tag entrytracker:latest 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:${{ steps.versioning.outputs.version }}
-      - name: Push Docker images to ECR
+          docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:latest
+          docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
+      - name: Push Docker images to ECRR
         run: |
-          docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:latest
-          docker push 033567013533.dkr.ecr.ap-south-1.amazonaws.com/entrytracker-develeap:${{ steps.versioning.outputs.version }}
+          docker push ${{ secrets.ECR_REPO_URI }}:latest
+          docker push ${{ secrets.ECR_REPO_URI }}:${{ steps.versioning.outputs.new_tag }}
   Deploy-to-EC2:
     needs: Push-to-ECR
     runs-on: ubuntu-latest
@@ -139,15 +152,15 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/deploy_key.pem
           chmod 400 ~/.ssh/deploy_key.pem
-      - name: Deploy to EC2 via SSHH
-        run: |
-         ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-         "set -e && \
-         echo '🔐 Logging in to Amazon ECR...' && \
-         aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }} && \
-         echo '📁 Navigating to app directory...' && \
-         cd ~ && \
-         echo '⬇️ Pulling latest image...' && \
-         docker compose pull && \
-         echo '🚀 Restarting containers...' && \
-         docker compose up -d"
+      - name: Deploy to EC2 with SSH
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | \
+            docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
+            cd ~
+            docker compose pull
+            docker compose up -d
