--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,24 +113,33 @@ jobs:
         run: |
           aws ecr get-login-password --region ${{ secrets.ECR_REGION }} | \
           docker login --username AWS --password-stdin ${{ secrets.ECR_REPO_URI }}
-      - name: Get latest patch version and bump it
-        id: versioning
+      - name: Get the latest Git tag and increment patch version
+        id: increment_version
         run: |
-          set -e
-          repo="entrytracker-develeap"
-          latest=$(aws ecr list-images \
-            --repository-name $repo \
-            --query 'imageIds[*].imageTag' \
-            --output text | tr '\t' '\n' | grep -E '^1\\.0\\.[0-9]+$' | sort -V | tail -n1)
-          if [ -z "$latest" ]; then
-            new_version="1.0.0"
+          git fetch --tags
+          latest_tag=$(git tag -l "v*" | sort -V | tail -n 1)
+
+          if [ -z "$latest_tag" ]; then
+            new_tag="1.0.0"
           else
-            patch=$(echo "$latest" | cut -d. -f3)
-            new_patch=$((patch + 1))
-            new_version="1.0.${new_patch}"
+            major=$(echo $latest_tag | cut -d '.' -f 1 | sed 's/v//')
+            minor=$(echo $latest_tag | cut -d '.' -f 2)
+            patch=$(echo $latest_tag | cut -d '.' -f 3)
+            patch=$((patch + 1))
+            new_tag="${major}.${minor}.${patch}"
           fi
-          echo "📦 New image version: $new_version"
-          echo "new_tag=$new_version" >> "$GITHUB_OUTPUT"
+
+          echo "✅ New Git version tag: $new_tag"
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+
+      - name: Create and push Git tag
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag ${{ steps.increment_version.outputs.new_tag }}
+          git push origin ${{ steps.increment_version.outputs.new_tag }}
       - name: Tag Docker images correctly
         run: |
           docker tag entrytracker:latest ${{ secrets.ECR_REPO_URI }}:latest
